Sat May 20 17:19:53 MDT 2006  Przemyslaw Grzegorczyk <pgrzegorczyk@gmail.com>

	* configure.ac:
	* po/LINGUAS:
	  - Update for intltool 0.35 and new po/LINGUAS standards. (#339300)

Sat May 20 15:45:18 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences.c:
	  - Add gconf listeners to update preferences when they change in
	    the gconf daemon. (#332926)

Wed May 17 23:53:21 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/irc-network.c:
	  - Add encodings KOI8-R (Cyrillic) and CP1257 (Baltic).
	    (#341897)

Sun May 14 18:29:10 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/fe-gnome.c:
	  - Don't use the "--no-auto" option when we save the
	    GNOME session. (Launchpad: #39863)

Mon May  1 00:06:26 CEST 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/channel-list.c:
	* data/channel-list.glade:
	  - Code cleanup: use a GtkTable to dispose widgets.
	    (#340190).

Sun Apr 30 23:52:11 CEST 2006  Christian Persch <chpe@gnome.org>

	* data/xchat-gnome.glade:
	* data/topic-change.glade:
	* data/connect-dialog.glade:
	* data/preferences-dialog.glade:
	  - Misc HIG spacing fixes. (#340189)

Sun Apr 30 22:52:52 CEST 2006  Guillaume Desmottes <cass@skynet.be>
	* src/fe-gnome/fe-gnome.c:
	  - Fix a crash when opening a new query window. (#340142)

Sun Apr 30 12:17:14 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	* data/xchat-gnome.glade:
	  - Pressing enter on the "Change Nick" prompt performs the
	    default action. (Launchpad: #42130)
	  - Change label from "OK" to "Change"; more HIG spirit.

Sun Apr 23 00:17:04 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/navigation-tree.c:
	  - Disconnect the server when we close it using the right
	    click menu. (Launchpad: #40815)

Sat Apr 22 23:06:24 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/conversation-panel.c:
	  - Display the default menu when you right click in a private